src/objects/CS_Milestone_Business_Hours__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>**** Service Cloud  Milestone Business Hours ******</description>
    <fields>
        <fullName>CS_Business_Days__c</fullName>
        <label>Business Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Entitlement_Process_Name__c</fullName>
        <description>Entitlement Process Name</description>
        <label>Entitlement Process Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Exception_Email__c</fullName>
        <defaultValue>&apos;mgunasekaran@guidewire.com&apos;</defaultValue>
        <description>***** Email Id to Send Exception *****</description>
        <label>Exception Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Milestone_Name__c</fullName>
        <description>Milestone Name</description>
        <label>Milestone Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Severity__c</fullName>
        <label>Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>GW Milestone Business Hours</label>
</CustomObject>